Closed Bug 205347 Opened 22 years ago Closed 22 years ago

warning: `PRBool IsInlineNode(class nsIDOMNode *)' defined but not used

Categories

(Core :: DOM: Editor, defect)

defect
Not set
trivial

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/swap/BEOS/mozilla/editor/libeditor/html/nsWSRunObject.cpp:64: warning: `PRBool IsInlineNode(class nsIDOMNode *)' defined but not used
Comment on attachment 123032 [details] [diff] [review] remove unused function if you're really attached to this function, i can ifdef it to something; but i'd like to remove it from normal builds
Attachment #123032 - Flags: review?(jfrancis)
it can go away
Attachment #123032 - Flags: superreview?(sfraser)
OS: BeOS → All
Hardware: PC → All
Attachment #123032 - Flags: superreview?(sfraser) → superreview+
Comment on attachment 123032 [details] [diff] [review] remove unused function r=brade (based on Joe's comment above)
Attachment #123032 - Flags: review?(jfrancis) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
rs vrfy.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: