Bug 205347 warning: `PRBool IsInlineNode(class nsIDOMNode *)' defined but not used r=brade,jfrancis sr=sfraser